iac/services/frontend/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rt-frontend
spec:
  hostnames:
    - whisper-notes.shivanshs9.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: default
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: whisper-notes-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
